<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/tv_start"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/ll_start"
            style="@style/PanelTable"
            android:layout_margin="12.0dip"
            android:layout_toRightOf="@+id/tv_start" >

            <EditText
                android:id="@+id/et_start"
                style="@style/TextArea"
                android:layout_height="60.0dip"
                android:focusable="true"
                android:hint="@string/et_start"
                android:singleLine="true" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/tv_end"
            android:textSize="14sp" />

        <LinearLayout
            style="@style/PanelTable"
            android:layout_margin="12.0dip"
            android:layout_toRightOf="@+id/tv_end" >

            <EditText
                android:id="@+id/et_end"
                style="@style/TextArea"
                android:layout_height="60.0dip"
                android:focusable="true"
                android:hint="@string/et_end"
                android:singleLine="true" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_query"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_query"
        android:textSize="14sp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0" >

        <TextView
            android:id="@+id/result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>